# braidcast-studio

./: .gitignore  .gitmodules  AUTHORS  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COC.rst  CONTRIBUTING.md  INSTALL  README.rst  SECURITY.md  changelog.config.ts  magefile.go
.github/scripts/: .build.zsh  .package.zsh  Build-Windows.ps1  New-DevSigningCert.ps1  Package-Msix.ps1  Package-Windows.ps1  Smoke-Package.ps1
.github/workflows/: analyze-project.yaml  build-project.yaml  check-format.yaml  publish.yaml  push.yaml  release-braidcast.yaml  scheduled.yaml
build-aux/: README.md  com.braidcast.Braidcast.json  com.obsproject.obs-multistream.json
cmake/common/: bootstrap.cmake  cpackconfig_common.cmake  versionconfig.cmake
cmake/linux/: cpackconfig.cmake  helpers.cmake
cmake/macos/: helpers.cmake
cmake/windows/: cpackconfig.cmake  helpers.cmake
docs/: antivirus.md  dev-env-vars.md  frontend-parity-gaps.md  issues.md  review-findings.md  roadmap-archive.md  roadmap.md  rust-research.md  signing.md
docs/research/: branding-trademark.md  naming-candidates.md  oauth-broker-obs-mechanics.md  oauth-verification-requirements.md  tooling-eval.md
docs/sessions/: 2026-06-15-phase2-autonomous-run.md
docs/sphinx/: conf.py
frontend/: CMakeLists.txt  obs-main.cpp
frontend/api-impl/: frontend_callbacks.cpp
frontend/cmake/: feature-kick.cmake  feature-twitch.cmake  feature-youtube.cmake  gen-build-info.cmake  os-linux.cmake  ui-config.h.in  ui-docks.cmake  ui-utility.cmake
frontend/dialogs/: CanvasEditorDialog.cpp  CanvasEditorDialog.hpp  OBSAbout.cpp  OBSBasicSourceSelect.cpp  OBSBasicTransform.cpp
frontend/docks/: CanvasDock.cpp  CanvasDock.hpp  MultistreamDock.cpp
frontend/settings/: OBSBasicSettings.cpp  OBSBasicSettings.hpp  OBSBasicSettings_Canvas.cpp  OBSBasicSettings_Outputs.cpp  OBSBasicSettings_Stream.cpp
frontend/src/: AdvancedSettings.cpp  AdvancedSettings.hpp  DiagnosticsSettings.hpp  GeneralSettings.cpp  GeneralSettings.hpp  app.cpp  app.hpp  app_icon.hpp  async_task.cpp  async_task.hpp  bridge.cpp  bridge.hpp  build_info.cpp  build_info.hpp  client.cpp  client.hpp  event_names.hpp  gpu_safe_mode.cpp  gpu_safe_mode.hpp  http_client.cpp  http_client.hpp  ingest_writeback.cpp  ingest_writeback.hpp  interact_window.cpp  interact_window.hpp  log.cpp  log.hpp  main.cpp  obf.c  obs_bootstrap.cpp  obs_bootstrap.hpp  obs_importer.cpp  obs_importer.hpp  perf_repro_selftest.cpp  perf_repro_selftest.hpp  preview_window.cpp  preview_window.hpp  projector_window.cpp  projector_window.hpp  properties_serializer.cpp  (+14 more)
frontend/utility/: CanvasDefinition.cpp  CanvasDefinition.hpp  CanvasSceneLink.cpp  CanvasSceneLink.hpp  CrashHandler.cpp  MultistreamOutput.cpp  MultistreamOutput.hpp  OutputBinding.cpp  OutputBinding.hpp  StreamProfile.cpp  StreamProfile.hpp  UndoManager.cpp
frontend/web/: index.html  obs-bridge.js  package.json  tsconfig.json  vite.config.ts
frontend/widgets/: OBSBasic.cpp  OBSBasic.hpp  OBSBasicPreview.cpp  OBSBasic_Canvases.cpp  OBSBasic_MainControls.cpp  OBSBasic_Preview.cpp  OBSBasic_SceneCollections.cpp  OBSBasic_SysTray.cpp
frontend/wizards/: AutoConfigStreamPage.cpp
frontend_old/: OBSApp.cpp  OBSStudioAPI.cpp  obs-main.cpp
frontend_old/cmake/: feature-whatsnew.cmake  os-freebsd.cmake
frontend_old/dialogs/: CanvasEditorDialog.hpp  OBSYoutubeActions.cpp
frontend_old/docks/: CanvasDock.hpp  MultistreamDock.hpp
frontend_old/forms/: OBSBasicSettings.ui
frontend_old/settings/: OBSBasicSettings_Canvas.cpp
frontend_old/updater/: updater.cpp
frontend_old/utility/: CanvasDefinition.cpp  MultistreamOutput.cpp  OutputBinding.cpp
frontend_old/widgets/: OBSBasicPreview.hpp  OBSBasic_SceneCollections.cpp  OBSBasic_Updater.cpp
libobs/: obs-canvas.c  obs-internal.h  obs-source.c  obs-video.c  obs.c  obs.h
libobs-d3d11/: d3d11-shader.cpp  d3d11-subsystem.cpp
libobs-opengl/: gl-subsystem.c
libobs/cmake/: os-windows.cmake
libobs/util/: bmem.c  bmem.h
plugins/obs-vst/: CMakeLists.txt  VSTPlugin.cpp  obs-vst.cpp
plugins/obs-vst/headers/: EditorWidget.h  VSTPlugin.h
plugins/obs-vst/win/: EditorWidget-win.cpp
test/integration/: CMakeLists.txt  README.md  bootstrap_shim.cpp  harness.cpp  harness.hpp  test_persistence.cpp  testseam.hpp
website/: .gitignore  astro.config.mjs  package.json
(+481 files in other folders)
